# osprey-dpd

./: .gitignore  CMakeLists.txt
dt10_experiments/scaling/: dmpci.3b16e5m5r0025_full_WxHxD  dmpci.3b16e5m5r0025_noangle_WxHxD  dmpci.3b16e5m5r0025_nobond_WxHxD  makefile
dt10_std/b6e8m5r002n1x100/: dmpci.b6e8m5r002n1x100  dmpci.b6e8m5r002n1x100-original
dt10_std/lm069/: lm069.mk
dt10_std/lm069/128x128x128/: dmpci.lm069
dt10_std/lm069/16x16x16/: dmpci.lm069
dt10_std/lm069/32x32x32/: dmpci.lm069
dt10_std/lm069/48x48x48/: dmpci.lm069
dt10_std/lm069/64x64x64/: dmpci.lm069
dt10_std/lm069/96x96x96/: dmpci.lm069
src/: AbstractBead.cpp  AbstractBead.h  AbstractCell.cpp  AbstractCell.h  AdhesionData.cpp  Analysis.h  AnalysisData.h  AnalysisObject.h  AnalysisTool.h  Bead.cpp  Bead.h  Bead1dProfile.cpp  BeadChargeWrapper.h  BeadIdHashRNG.h  BeadType.h  Bilayer.cpp  Bilayer.h  BilayerData.cpp  Bond.cpp  Bond.h  BondPair.cpp  BondPair.h  BondPairType.h  BondRuptureData.cpp  BondType.h  CNTCell.cpp  CNTCell.h  CNTCellProfile.h  Cell.h  CellProfile.h  CellProfileSet.h  CommandLineParameters.cpp  CommandLineParameters.h  CommandTarget.cpp  CommandTargetACNFreeBonds.cpp  CommandTargetACNFreePolymers.cpp  CommandTargetAnalysis.cpp  CommandTargetComposite.cpp  CommandTargetGeometry.cpp  CommandTargetNode.h  (+581 more)
src/engines/: ClusterPolicy.h  ISimEngine.cpp  ISimEngine.h  ParallelContext.cpp  ParallelContext.h  ParallelContext_NaiveThreads.h  ParallelContext_Sequential.h  ParallelContext_TBB.h  ParallelServices.hpp  ParallelServices_Sequential.cpp  RNGPolicy.h  RNGPolicy.hpp  SimEngineFast.cpp  SimEngineRef.cpp  SimEngineSeq.cpp  SimEngineSeq.h  SimEngineSeq.hpp  SimEngineSeqAVX2.cpp  SimEngineSeqNEON.cpp  SimEngineSeqV0.cpp  SimEngineSeqV0.h  SimEngineSeqV0.hpp  SimEngineTBB.cpp  SimEngineTBB.h  SimEngineTBB.hpp  SimEngineTest_FrozenBeads.cpp  SimEngineTest_PositionSizzle.cpp  SimEngineTest_Sizzle.cpp  SimEngineTest_SkipTime.cpp  SimEngineTest_WrongDiss.cpp  bead_id_hash_rng.hpp  bond_info.h  bond_info.hpp  morton_codec.h  morton_codec.hpp
src/interfaces/: ISimState.cpp  ISimState.h
src/ta_decorators/: taBinTimeIntervals.h  taSerializeHistogram.cpp
testing/: readme.md
testing/problem-cases/water-oil-stiff-explode/: dmpci.water-oil-stiff-explode
testing/testcases/: dmpci.dissolve  dmpci.swish  dmpci.vary_cons  dmpci.vary_diss  dmpci.water-oil-floppy  dmpci.water-oil-stiff  dpd-fast.sh  dpd-fastpar.sh  dpd-frozenbeads.sh  dpd-neon.sh  dpd-pos-sizzle.sh  dpd-ref-hash-rng.sh  dpd-ref-mt19937-rng.sh  dpd-seq.sh  dpd-seqv0.sh  dpd-sizzle.sh  dpd-skiptime.sh  dpd-tbb.sh  dpd-wrongdiss.sh  generate_testcase_data.sh  test_implementation.sh
testing/tools/: calculate_dmpci_file_hash.py  convert_dmpcas_distributions_to_graphs.py  evaluate_series.py  extract_dmpcas_distributions.py  parse_dmpcas.py  run_replicates.py
testing/tools/series_utils/: calc_empirical_stats.py  parse_dmpcas.py  time_series_bundle.py  walk_statistics.py
testing/unittests/: test_hash_rng.cpp  test_parallel_services.cpp
